Disable and enable eager execution

--- a/TF_TUTORIAL.ipynb
+++ b/TF_TUTORIAL.ipynb
@@ -6,7 +6,7 @@
       "name": "TF_TUTORIAL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOTeoGqChxbc0G7uQjDGZQu",
+      "authorship_tag": "ABX9TyNJbARpVVvFQWNSLccSfuRd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,32 +50,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iYSr91h9fFHE",
-        "outputId": "f83c238e-c25b-4b64-abd8-2dc8db8cf6bf"
+        "id": "iYSr91h9fFHE"
       },
       "source": [
         "import os\r\n",
         "import tensorflow as tf\r\n",
-        "import cProfile"
+        "import cProfile\r\n",
+        "tf.compat.v1.enable_eager_execution()"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -84,11 +68,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3XAQxdWLjWDL",
-        "outputId": "4588ac3a-3fd3-4f5c-d35a-eeaaff9cb8e3"
+        "outputId": "8aea3850-ce10-4162-e8fc-57f47ad953b3"
       },
       "source": [
         "# Eager execution is enabled by default in TF2.0\r\n",
-        "tf.compat.v1.disable_eager_execution()\r\n",
+        "\r\n",
         "tf.executing_eagerly()\r\n",
         "# Run TF ops and the results will return immediately:\r\n",
         "x = [[2.]]\r\n",
@@ -99,14 +83,18 @@
         "b = tf.add(a, 1)\r\n",
         "print(b)"
       ],
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello, Tensor(\"MatMul_2:0\", shape=(1, 1), dtype=float32)\n",
-            "Tensor(\"Const_3:0\", shape=(2, 2), dtype=int32)\n",
-            "Tensor(\"Add_3:0\", shape=(2, 2), dtype=int32)\n"
+            "hello, [[4.]]\n",
+            "tf.Tensor(\n",
+            "[[1 2]\n",
+            " [3 4]], shape=(2, 2), dtype=int32)\n",
+            "tf.Tensor(\n",
+            "[[2 3]\n",
+            " [4 5]], shape=(2, 2), dtype=int32)\n"
           ],
           "name": "stdout"
         }
@@ -128,14 +116,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vFZvyYaolywK",
-        "outputId": "d31304c9-d17c-4480-dbe0-2bf6d36fb451"
+        "outputId": "a27e995f-0a21-4e9a-b3a4-8ffca0d2e4f2"
       },
       "source": [
         "tf.compat.v1.disable_eager_execution()\r\n",
         "a = tf.constant([[1, 2], [3, 4]])\r\n",
         "print(a)"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,13 +141,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ghyt0LWxl1bY",
-        "outputId": "e87195bb-979f-4980-b243-96554236c8de"
+        "outputId": "c223e361-78ab-4875-b50a-aaae388b1dd7"
       },
       "source": [
         "b = tf.add(a, 1)\r\n",
         "print(b)"
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
