使用 Colaboratory 创建

--- a/TF_TUTORIAL.ipynb
+++ b/TF_TUTORIAL.ipynb
@@ -6,7 +6,7 @@
       "name": "TF_TUTORIAL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJbARpVVvFQWNSLccSfuRd",
+      "authorship_tag": "ABX9TyNyiVgVpU+GQK22IYvrIujw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3XAQxdWLjWDL",
-        "outputId": "8aea3850-ce10-4162-e8fc-57f47ad953b3"
+        "outputId": "18a330e6-e731-4475-cad0-f8af79f29741"
       },
       "source": [
         "# Eager execution is enabled by default in TF2.0\r\n",
@@ -79,9 +79,7 @@
         "m = tf.matmul(x, x)\r\n",
         "print(\"hello, {}\".format(m))\r\n",
         "a = tf.constant([[1, 2], [3, 4]])\r\n",
-        "print(a)\r\n",
-        "b = tf.add(a, 1)\r\n",
-        "print(b)"
+        "print(a)"
       ],
       "execution_count": 2,
       "outputs": [
@@ -91,7 +89,39 @@
             "hello, [[4.]]\n",
             "tf.Tensor(\n",
             "[[1 2]\n",
-            " [3 4]], shape=(2, 2), dtype=int32)\n",
+            " [3 4]], shape=(2, 2), dtype=int32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f1RIAi5p95Pp"
+      },
+      "source": [
+        "Broadcasting"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "noyh6Fax96ei",
+        "outputId": "43d504dc-a3a3-43f3-ff69-e54c78977f3b"
+      },
+      "source": [
+        "b = tf.add(a, 1)\r\n",
+        "print(b)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "tf.Tensor(\n",
             "[[2 3]\n",
             " [4 5]], shape=(2, 2), dtype=int32)\n"
@@ -99,6 +129,214 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SVmLsK7_963i"
+      },
+      "source": [
+        "Operator overloading"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CqnMdIA6-izf",
+        "outputId": "b704a6e8-4a90-49d3-e681-2853c80837f3"
+      },
+      "source": [
+        "print(a * b)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(\n",
+            "[[ 2  6]\n",
+            " [12 20]], shape=(2, 2), dtype=int32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q27eIQ5k-thE"
+      },
+      "source": [
+        "Use NumPy values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7dw1DZfE-uVY",
+        "outputId": "33e2732c-b4c7-4ea5-9dbb-d08ab95de365"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "\r\n",
+        "c = np.multiply(a, b)\r\n",
+        "print(c)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 2  6]\n",
+            " [12 20]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7SyjI92w_Boh"
+      },
+      "source": [
+        "Obtain numpy value from a tensor:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sDGadXb3_ErT",
+        "outputId": "c92b43f9-db41-4b32-ec92-df373c551222"
+      },
+      "source": [
+        "print(a.numpy())"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2]\n",
+            " [3 4]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5Je2GJFr_V0t"
+      },
+      "source": [
+        "**Dynamic control flow**\r\n",
+        "\r\n",
+        "A major benefit of eager execution is that all the functionality of the host language is available while your model is executing. So, for example, it is easy to write fizzbuzz:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-T2gO-_8_53C"
+      },
+      "source": [
+        "def fizzbuzz(max_num):\r\n",
+        "  counter = tf.constant(0)\r\n",
+        "  max_num = tf.convert_to_tensor(max_num)\r\n",
+        "  for num in range(1, max_num.numpy()+1):\r\n",
+        "    num = tf.constant(num)\r\n",
+        "    if int(num % 3) == 0 and int(num % 5) == 0:\r\n",
+        "      print('FizzBuzz')\r\n",
+        "    elif int(num % 3) == 0:\r\n",
+        "      print('Fizz')\r\n",
+        "    elif int(num % 5) == 0:\r\n",
+        "      print('Buzz')\r\n",
+        "    else:\r\n",
+        "      print(num.numpy())\r\n",
+        "    counter += 1"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rr8OK7BAABRQ"
+      },
+      "source": [
+        "This has conditionals that depend on tensor values and it prints these values at runtime."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zGxXjvcx_88m",
+        "outputId": "718cc0e8-81b7-431a-cf7e-5c8dab652aea"
+      },
+      "source": [
+        "fizzbuzz(15)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "Fizz\n",
+            "4\n",
+            "Buzz\n",
+            "Fizz\n",
+            "7\n",
+            "8\n",
+            "Fizz\n",
+            "Buzz\n",
+            "11\n",
+            "Fizz\n",
+            "13\n",
+            "14\n",
+            "FizzBuzz\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MBKkprX7FiQI"
+      },
+      "source": [
+        "**Eager training**\r\n",
+        "\r\n",
+        "Computing gradients\r\n",
+        "\r\n",
+        "Automatic differentiation is useful for implementing machine learning algorithms such as backpropagation for training neural networks. During eager execution, use tf.GradientTape to trace operations for computing gradients later."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5yUA8EbJFkAr"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -157,6 +395,20 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i_OVp02V-xi5"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "\r\n",
+        "c = np.multiply(a, b)\r\n",
+        "print(c)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
