update custom gradients

--- a/EAGER_EXE_TUTORIAL.ipynb
+++ b/EAGER_EXE_TUTORIAL.ipynb
@@ -6,7 +6,7 @@
       "name": "EAGER_EXE_TUTORIAL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMYro2O6gF+PSUtUCNLy3Ux",
+      "authorship_tag": "ABX9TyNp9wdoIbWu9sxWSPL37SEE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "import cProfile\r\n",
         "tf.compat.v1.enable_eager_execution()"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1106,34 +1106,92 @@
         "  with tf.GradientTape() as tape:\r\n",
         "    tape.watch(x)\r\n",
         "    value = log1pexp(x)\r\n",
+        "    # Grad = d(value)/d(x)\r\n",
         "  return tape.gradient(value, x)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1vwhElEDvVcq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1vwhElEDvVcq",
+        "outputId": "f4bf28af-dccc-4809-a6fd-8072d6434683"
       },
       "source": [
         "# The gradient computation works fine at x = 0.\r\n",
         "grad_log1pexp(tf.constant(0.)).numpy()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mKkki0qfvWvI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mKkki0qfvWvI",
+        "outputId": "2cad7fd1-58c9-42d9-fc31-f95013006636"
       },
       "source": [
         "# However, x = 100 fails because of numerical instability.\r\n",
         "grad_log1pexp(tf.constant(100.)).numpy()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "nan"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V7QNR7E5945i",
+        "outputId": "bd4936fa-2efe-4b09-ee3d-33c0e3f213ff"
+      },
+      "source": [
+        "print(tf.exp(100.).numpy())"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "inf\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1196,8 +1254,95 @@
         "id": "zgDQPRb5vU1o"
       },
       "source": [
-        ""
+        "**Performance**\r\n",
+        "\r\n",
+        "Computation is automatically offloaded to GPUs during eager execution. If you want control over where a computation runs you can enclose it in a tf.device('/gpu:0') block (or the CPU equivalent):"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6CkDCIEA_KLU",
+        "outputId": "5a5b7ce0-9d10-4520-c9ba-c91cf0c62930"
+      },
+      "source": [
+        "import time\r\n",
+        "\r\n",
+        "def measure(x, steps):\r\n",
+        "  # TensorFlow initializes a GPU the first time it's used, exclude from timing.\r\n",
+        "  tf.matmul(x, x)\r\n",
+        "  start = time.time()\r\n",
+        "  for i in range(steps):\r\n",
+        "    x = tf.matmul(x, x)\r\n",
+        "  # tf.matmul can return before completing the matrix multiplication\r\n",
+        "  # (e.g., can return after enqueing the operation on a CUDA stream).\r\n",
+        "  # The x.numpy() call below will ensure that all enqueued operations\r\n",
+        "  # have completed (and will also copy the result to host memory,\r\n",
+        "  # so we're including a little more than just the matmul operation\r\n",
+        "  # time).\r\n",
+        "  _ = x.numpy()\r\n",
+        "  end = time.time()\r\n",
+        "  return end - start\r\n",
+        "\r\n",
+        "shape = (1000, 1000)\r\n",
+        "steps = 200\r\n",
+        "print(\"Time to multiply a {} matrix by itself {} times:\".format(shape, steps))\r\n",
+        "\r\n",
+        "# Run on CPU:\r\n",
+        "with tf.device(\"/cpu:0\"):\r\n",
+        "  print(\"CPU: {} secs\".format(measure(tf.random.normal(shape), steps)))\r\n",
+        "\r\n",
+        "# Run on GPU, if available:\r\n",
+        "if tf.config.experimental.list_physical_devices(\"GPU\"):\r\n",
+        "  with tf.device(\"/gpu:0\"):\r\n",
+        "    print(\"GPU: {} secs\".format(measure(tf.random.normal(shape), steps)))\r\n",
+        "else:\r\n",
+        "  print(\"GPU: not found\")"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Time to multiply a (1000, 1000) matrix by itself 200 times:\n",
+            "CPU: 6.392500400543213 secs\n",
+            "GPU: not found\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LGSr_DfZ_ex7"
+      },
+      "source": [
+        "A tf.Tensor object can be copied to a different device to execute its operations:\r\n",
+        "\r\n",
+        "#TODO CHECK AVAILABILITY IN CURRENT VERSION"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aCyXZe_N_fuT"
+      },
+      "source": [
+        "if tf.config.experimental.list_physical_devices(\"GPU\"):\r\n",
+        "  x = tf.random.normal([10, 10])\r\n",
+        "\r\n",
+        "  x_gpu0 = x.gpu()\r\n",
+        "  x_cpu = x.cpu()\r\n",
+        "\r\n",
+        "  _ = tf.matmul(x_cpu, x_cpu)    # Runs on CPU\r\n",
+        "  _ = tf.matmul(x_gpu0, x_gpu0)  # Runs on GPU:0"
+      ],
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1270,15 +1415,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tXqf6bDilqtX"
-      },
-      "source": [
-        ""
-      ]
     }
   ]
 }
