Update custom grads

--- a/EAGER_EXE_TUTORIAL.ipynb
+++ b/EAGER_EXE_TUTORIAL.ipynb
@@ -6,7 +6,7 @@
       "name": "EAGER_EXE_TUTORIAL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNp9wdoIbWu9sxWSPL37SEE",
+      "authorship_tag": "ABX9TyMubj/FzZlGx/zVZVPbVqsX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
         "Evaluate operations immediately, without building graphs: operations *return concrete values* instead of constructing a compuational graph to run later. \r\n",
         "  *An intuitive interface*: Structure your code naturally and use Python data structures. Quickly iterate on small models and small data.\r\n",
         "  *Easier debugging*: Call ops directly to inspect running models and test changes. Use standard Python debugging toools for immediate error report.\r\n",
-        "  *Natural control flow*: Use Python control flow instead of graph control flow, simplifying the specification of dynamic models."
+        "  *Natural control flow*: Use Python control flow instead of graph control flow, simplifying the specification of dynamic models.\r\n",
+        "  Ref: https://www.tensorflow.org/guide/eager"
       ]
     },
     {
@@ -1065,7 +1066,9 @@
       "source": [
         "Custom gradients\r\n",
         "\r\n",
-        "Custom gradients are an easy way to override gradients. Within the forward function, define the gradient with respect to the inputs, outputs, or intermediate results. For example, here's an easy way to clip the norm of the gradients in the backward pass:"
+        "Custom gradients are an easy way to override gradients. Within the forward function, define the gradient with respect to the inputs, outputs, or intermediate results. For example, here's an easy way to clip the norm of the gradients in the backward pass:\r\n",
+        "\r\n",
+        "#TODO: Custom Gradients Examples"
       ]
     },
     {
