--- a/EAGER_EXE_TUTORIAL.ipynb
+++ b/EAGER_EXE_TUTORIAL.ipynb
@@ -6,7 +6,7 @@
       "name": "EAGER_EXE_TUTORIAL.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMubj/FzZlGx/zVZVPbVqsX",
+      "authorship_tag": "ABX9TyODX0+16uxhv8zImRjW2pxx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "import cProfile\r\n",
         "tf.compat.v1.enable_eager_execution()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,7 +391,7 @@
       "source": [
         "# Fetch and format the mnist data\r\n",
         "(mnist_images, mnist_labels), _ = tf.keras.datasets.mnist.load_data()\r\n",
-        "\r\n",
+        "# Normalize mnist images pixel value\r\n",
         "dataset = tf.data.Dataset.from_tensor_slices(\r\n",
         "  (tf.cast(mnist_images[...,tf.newaxis]/255, tf.float32),\r\n",
         "   tf.cast(mnist_labels,tf.int64)))\r\n",
@@ -625,7 +625,7 @@
         "  def call(self, inputs):\r\n",
         "    return inputs * self.W + self.B"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -650,7 +650,7 @@
         "    loss_value = loss(model, inputs, targets)\r\n",
         "  return tape.gradient(loss_value, [model.W, model.B])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -689,7 +689,7 @@
         "  if i % 20 == 0:\r\n",
         "    print(\"Loss at step {:03d}: {:.3f}\".format(i, loss(model, training_inputs, training_outputs)))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +727,7 @@
       "source": [
         "print(\"Final loss: {:.3f}\".format(loss(model, training_inputs, training_outputs)))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +750,7 @@
       "source": [
         "print(\"W = {}, B = {}\".format(model.W.numpy(), model.B.numpy()))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +773,7 @@
       "source": [
         "print(model.call(3))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +804,7 @@
         "model.save_weights('weights')\r\n",
         "status = model.load_weights('weights')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +827,7 @@
         "x = tf.Variable(10.)\r\n",
         "checkpoint = tf.train.Checkpoint(x=x)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
         "checkpoint_path = './ckpt/'\r\n",
         "checkpoint.save('./ckpt/')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,7 +881,7 @@
         "\r\n",
         "print(x)  # => 2.0"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +927,7 @@
         "root.save(checkpoint_prefix)\r\n",
         "root.restore(tf.train.latest_checkpoint(checkpoint_dir))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,7 +971,7 @@
         "m([8, 9])\r\n",
         "m.result()  # => 5.5"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
         "    rate /= 2.0\r\n",
         "  return x, value"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +1112,7 @@
         "    # Grad = d(value)/d(x)\r\n",
         "  return tape.gradient(value, x)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1128,7 +1128,7 @@
         "# The gradient computation works fine at x = 0.\r\n",
         "grad_log1pexp(tf.constant(0.)).numpy()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1157,7 +1157,7 @@
         "# However, x = 100 fails because of numerical instability.\r\n",
         "grad_log1pexp(tf.constant(100.)).numpy()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1185,7 +1185,7 @@
       "source": [
         "print(tf.exp(100.).numpy())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1305,7 +1305,7 @@
         "else:\r\n",
         "  print(\"GPU: not found\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1344,7 @@
         "  _ = tf.matmul(x_cpu, x_cpu)    # Runs on CPU\r\n",
         "  _ = tf.matmul(x_gpu0, x_gpu0)  # Runs on GPU:0"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
